--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "scripts": {
     "build": "rollup -c && tsc",
-    "test": "jest"
+    "test": "jest",
+    "publish": "np --contents=dist"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
