--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,12 @@
         "declaration": true,
         "declarationDir": "./dist",
         "moduleResolution": "node",
-        "module": "es6",
         "noImplicitAny": true,
         "outDir": "./dist",
         "target": "es2015",
+        "module": "commonjs",
         "skipLibCheck": true,
+        "esModuleInterop": true,
         "types": []
     },
     "include": ["src/index.ts"],
