--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
+  "repository": "shiftx/faunadb-fql-lib",
   "files": [
     "dist",
     "LICENSE",
