--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "build": "rm -rf dist && rollup -c && tsc",
     "test": "jest",
-    "publish": "np --contents=dist"
+    "release": "np --contents=dist"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
