--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-typescript": "^7.8.3",
     "@types/jest": "^25.1.1",
+    "@types/node": "^13.7.1",
+    "@yarnpkg/pnpify": "^2.0.0-rc.18",
     "eslint": "^6.8.0",
     "faunadb": "^2.11.1",
     "jest": "^25.1.0",
