--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
             - run: yarn
-            - run: yarn test
+            - run: yarn test --runInBand
               env:
                   CI: true
                   FAUNA_DB_SECRET: ${{ secrets.FAUNA_DB_SECRET }}
