--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "faunadb-fql-lib",
-  "version": "0.11.0-3",
+  "version": "0.11.0",
   "description": "A set of functions extending FQL by using current FQL primitives",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
